@@ -75,9 +75,9 @@ $webcalConfig = array (
   'EMAIL_HTML' => 'N',
   'EMAIL_MAILER' => 'mail',
   'EMAIL_REMINDER' => 'Y',
+  'ENABLE_CAPTCHA' => 'N',
   'ENABLE_GRADIENTS' => 'N',
   'ENABLE_ICON_UPLOADS' => 'N',
-  'ENABLE_CAPTCHA' => 'N',
   'ENTRY_SLOTS' => '144',
   'EXTERNAL_NOTIFICATIONS' => 'N',
   'EXTERNAL_REMINDERS' => 'N',
@@ -145,6 +145,9 @@ $webcalConfig = array (
   'TIMEZONE' => 'America/New_York',
   'TODAYCELLBG' => '#FFFF33',
   'UAC_ENABLED' => 'N',
+  'USER_PUBLISH_ENABLED' => 'Y',
+  'USER_PUBLISH_RW_ENABLED' => 'Y',
+  'USER_RSS_ENABLED' => 'N',
   'USER_SEES_ONLY_HIS_GROUPS' => 'Y',
   'USER_SORT_ORDER' => 'cal_lastname, cal_firstname',
   'WEBCAL_PROGRAM_VERSION' => 'v1.1.3',
