@@ -1,5 +1,6 @@
 $Id$
 Version 1.1.3+CVS (?? ??? 2006)
+ - Fixed bug [ 1636312 ] Notice: Undefined index: USER_PUBLISH_ENABLED
  - Fixed bug [ 1636026 ] missing user= in weekview links for other user's cal
  - Added VTIMEZONE capture and reuse logic
  - Added CAPTCHA validation option  to Public Access event creation
